--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         cabal update
         cabal build --only-dependencies --enable-tests --enable-benchmarks
+	cabal install hspec-discover
     - name: Build
       run: cabal build --enable-tests --enable-benchmarks all
     - name: Run tests
