--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -37,8 +37,9 @@ jobs:
       run: |
         cabal update
         cabal build --only-dependencies --enable-tests --enable-benchmarks
-        cabal install hspec-discover
     - name: Build
       run: cabal build --enable-tests --enable-benchmarks all
+    -name: Install test dependencies
+      run: cabal install hspec-discover
     - name: Run tests
       run: cabal test all
